# lib-srt

./: .gitignore  CMakeLists.txt  README.md  build.sh  example_usage_simple
cmake/: srtConfig.cmake.in
example_usage/: CMakeLists.txt  main.cpp
include/srt/: all.hpp  common.hpp  four_mat.hpp  four_mat_view.hpp  four_vec.hpp  four_vec_view.hpp  fwd.hpp  io.hpp  metric.hpp
src/: main.cpp
tests/: main_test_runner.cpp  test_declarations.hpp  test_four_mat.cpp  test_four_mat_view.cpp  test_four_vec.cpp  test_four_vec_view.cpp  test_utils.hpp
